# thumbnails-readme

./: .directory  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/templates/: FEATURE_REQUEST.md  ISSUE_TEMPLATE.md  PULL_REQUEST.md
.github/workflows/: test.yml
docs/: Makefile  conf.py  index.rst  modules.rst  thumbnails_readme.rst
examples/: __init__.py  thumbnails_readme_example.py
tests/: test_thumbnails_readme.py
tests/figures-main/programming/haskell/yesod-framework/: README.md
thumbnails_readme/: __init__.py  thumbnails_readme.py
