[tool.poetry]
name = "thumbnails-readme"
version = "0.1.0"
description = ""
authors = ["Rok Kukovec <rok.kukovec1@um.si>", "firefly-cpp <iztok@iztok-jr-fister.eu>"]

[tool.poetry.dependencies]
python = "^3.11"
pdf2image = "^1.16.2"
Pillow = "^9.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
