[tool.poetry]
name = "thumbnails-readme"
version = "0.2"
description = "Create thumbnails from Git folders"
authors = ["Rok Kukovec <rok.kukovec@um.si>", "Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>"]
keywords = ['thumbnails', 'README']
homepage = "https://github.com/firefly-cpp/thumbnails-readme"
repository = "https://github.com/firefly-cpp/thumbnails-readme"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.16.2"
Pillow = "^9.4.0"
CairoSVG = "^2.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
