[tool.poetry]
name = "thumbnails-readme"
version = "0.4.1"
description = "Create thumbnails from Git folders"
authors = ["Rok Kukovec <rok.kukovec@um.si>", "Iztok Fister, Jr. <iztok@iztok-jr-fister.eu>"]
keywords = ['thumbnails', 'README']
homepage = "https://github.com/firefly-cpp/thumbnails-readme"
repository = "https://github.com/firefly-cpp/thumbnails-readme"
readme = "README.md"

include = [
    { path="LICENSE", format="sdist" }
]

[tool.poetry.dependencies]
python = "^3.9"
pdf2image = "^1.16.2"
Pillow = ">=9.4,<11.0"
CairoSVG = "^2.7.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length = 79
profile = "black"
remove_redundant_aliases = true


[tool.ruff]

# Assume Python 3.10.
target-version = 'py310'
# Black = 88, but we're using 79 to match Flake8.
line-length = 79
# Show fixes
show-fixes = true
# every check supported by Ruff
select = [
    'ALL',
    'I',
]

ignore = ['D211', 'D213', 'EXE002']

# Exclude a variety of commonly ignored directories.
exclude = [
    '.git',
    '.ruff_cache',
    '.tox',
    '.venv',
    '__pypackages__',
    '_build',
    'buck-out',
    'build',
    'dist',
    'venv',
    '.venv',
    'tests/roots/*',
    'build/*',
    'doc/_build/*',
]

[tool.ruff.per-file-ignores]
'tests/*.py' = ['S101']
'docs/*.py' = ['INP001','A001', 'PTH100']
'examples/*.py' = ['ERA001']

[tool.ruff.flake8-quotes]
inline-quotes = 'single'

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
testpaths =  "./tests"
